--- a/public/app/components/navBar/navBar.css
+++ b/public/app/components/navBar/navBar.css
@@ -1,2 +1,114 @@
-section{
+*{
+    padding: 0;
+    color: rgb(73, 73, 73);
+    background-color: white;
+    
+    
 }
+
+section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: -10px;
+    margin-top: -10px;
+    margin-bottom: 50px;
+    position: fixed;
+    width: 100%;
+
+}
+
+section img, svg{
+    height: 60px;
+}
+
+
+.up{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left{
+    display: flex;
+    flex-direction: row ;
+    gap: 30px;
+}
+
+.search{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.search input{
+    width: 350px;
+    border: 0;
+    border-bottom: 4px;
+}
+
+.right{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    margin-right: 10px;
+}
+
+.support{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.wishlist{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.login{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.down{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+.games{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.ninSwitch{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.news{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+*:hover{
+    color: rgb(217, 5, 5);
+}
+
+
